Added Activity Log

--- a/ModuleMessagingExtMFD/ModuleMessagingExtMFD.vcxproj.filters
+++ b/ModuleMessagingExtMFD/ModuleMessagingExtMFD.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="ModuleMessagingExtMFD_VCore.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleMessagingExtMFD_Interface.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DisplayEngUnitFunctions.cpp">
@@ -69,6 +72,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ModuleMessagingExtMFD_VCore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MFDPersist.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleMessagingExtMFD_Interface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
