Fixed up to work with refactored new MMExt2 Core

--- a/ModuleMessagingExtMFD/ModuleMessagingExtMFD.vcxproj
+++ b/ModuleMessagingExtMFD/ModuleMessagingExtMFD.vcxproj
@@ -63,6 +63,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <EnablePREfast>true</EnablePREfast>
+      <BufferSecurityCheck>true</BufferSecurityCheck>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
